src/objects/Account_Snapshot__c.object
<CustomObject>
    <description>Object created to store account snapshot data</description>
    <fields>
        <fullName>ABM_Account_Score_Unattached_Contacts__c</fullName>
        <label>S: ABM - Pre-Pipeline Account Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Snapshots</relationshipLabel>
        <relationshipName>Account_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_Snapshot_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Account Snapshot ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_ABM_Account_Score_Unattached_Contacs__c</fullName>
        <label>S: ABM - Pipeline Account Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_ABM_Account_Maturity__c</fullName>
        <description>Stores snapshot data of account level</description>
        <label>Snapshot: ABM Account Maturity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_ABM_Account_Score__c</fullName>
        <description>Stores ABM account score from snapshot reports</description>
        <label>Snapshot: ABM - Total Account Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Account_DUNS__c</fullName>
        <description>Stores Snapshot account DUNS number</description>
        <label>Snapshot: Account DUNS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Account_ID__c</fullName>
        <description>Account ID from account snapshot</description>
        <label>Snapshot: Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Account_Industry__c</fullName>
        <description>Stores account industry</description>
        <label>Snapshot: Account Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Chemicals &amp; Petroleum</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consumer Products</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy &amp; Utilities</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Healthcare/Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>HR &amp; Recruiting</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Media &amp; Entertainment</fullName>
                </value>
                <value>
                    <fullName>Metals &amp; Mining</fullName>
                </value>
                <value>
                    <fullName>Not-for-profit</fullName>
                </value>
                <value>
                    <fullName>Other (Describe...)</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Publishing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Social Networks</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Snapshot_Account_Name__c</fullName>
        <description>Stores account name from snapshot</description>
        <label>Snapshot: Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Account_Open_ARR__c</fullName>
        <description>Rollup Summary of ARR on open opportunities</description>
        <label>Snapshot: Account Open ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Account_Owner__c</fullName>
        <description>Snapshot account owner storage</description>
        <label>Snapshot: Account Owner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Account_Revenue__c</fullName>
        <description>Stores account revenue</description>
        <label>Snapshot: Account Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 10 Million</fullName>
                </value>
                <value>
                    <fullName>10 - 25 Million</fullName>
                </value>
                <value>
                    <fullName>25 - 100 Million</fullName>
                </value>
                <value>
                    <fullName>100 - 500 Million</fullName>
                </value>
                <value>
                    <fullName>500 Million - 1 Billion</fullName>
                </value>
                <value>
                    <fullName>1 Billion - 5 Billion</fullName>
                </value>
                <value>
                    <fullName>5 Billion +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Snapshot_Account_Shipping_Country__c</fullName>
        <description>Stores account snapshot data of country</description>
        <label>Snapshot: Account Shipping Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Account_Shipping_State__c</fullName>
        <description>Stores state from snapshot</description>
        <label>Snapshot: Account Shipping State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Account_Type__c</fullName>
        <description>Snapshot of account type</description>
        <label>Snapshot: Account Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Number_of_Closed_Lost_Opps__c</fullName>
        <description>Number of closed lost opportunities associated with the account</description>
        <label>Snapshot: Number of Closed Lost Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Number_of_Closed_Won_Opps__c</fullName>
        <description>Number of closed won opportunities associated with the account</description>
        <label>Snapshot: Number of Closed Won Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Number_of_Contacts__c</fullName>
        <description>Number of contacts from Accoung Snapshot report</description>
        <label>Snapshot: Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Number_of_Open_New_Opps__c</fullName>
        <description>Snapshot of number of open opportunities on account</description>
        <label>Snapshot: Number of Open New Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Parent_Account_ID__c</fullName>
        <description>Store parent Account ID from Snapshot</description>
        <label>Snapshot: Parent Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Snapshot_Account_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>